@@ -1,3 +1,7 @@
+2007-05-26  Brian Bidulock  <bidulock@openss7.org>
+
+	* nettest_xti.c: use T_MORE for SCTP/TCP comparisons
+
 2007-05-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* nettest_bsd.c: make TCP BSD tests comparable to XTI SCTP
